--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,14 +1,10 @@
-button:
-  about: About
-  back: Back
-  go: GO
-  home: Home
-  toggle_dark: Toggle dark mode
-  toggle_langs: Change languages
 intro:
-  desc: Opinionated Vite Starter Template
-  dynamic-route: Demo of dynamic route
   hi: Hi, {name}!
-  aka: Also known as
-  whats-your-name: What's your name?
+
+shiki:
+  empty_shiki_id: Shikimori ID input can not be empty
+
+anilist:
+  login: Login with AniList
+
 not-found: Not found
