--- a/locales/en.yml
+++ b/locales/en.yml
@@ -4,12 +4,17 @@ intro:
 shiki:
   empty_shiki_id: Shikimori ID input can not be empty
   import_anime_list: Import anime list
+  import_manga_list: Import manga list
   anime_list_imported_successfully: Anime list imported successfully
+  manga_list_imported_successfully: Manga list imported successfully
+  anime_list_status: Anime list status
+  manga_list_status: Manga list status
 
 anilist:
   login: Login with AniList
   token_expired: Your token is expired, relogin please
-  export_anime_to_anilist: Export anime list now
+  export_anime_to_anilist: Export anime
+  export_manga_to_anilist: Export manga
   can_not_set_anime: Can not set anime {animeName}
   anime_set_successfully: Anime {animeName} set successfully
   token_has_not_expired: Your token has not expired yet, are you sure?
