--- a/locales/en.yml
+++ b/locales/en.yml
@@ -22,5 +22,7 @@ anilist:
 general:
   several_failed_imports: There are several failed imports
   successful_import: Successful import to anilist
+  import_timeout: Timeout for {sec} seconds
+  export_import_settings: Settings
 
 not-found: Not found
