--- a/locales/en.yml
+++ b/locales/en.yml
@@ -25,5 +25,7 @@ general:
   successful_import: Successful import to anilist
   import_timeout: Timeout for {sec} seconds
   export_import_settings: Settings
+  stop: Stop
+  stop_export: Stop export
 
 not-found: Not found
